--- a/index.html
+++ b/index.html
@@ -1,21 +1,66 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+  <head>
 
-<head>
-    <title>AJAX Test</title>
-    <script type="text/javascript" src="main.js"></script>
-</head>
-
-<body>
-	<button onclick = "writeToDocument('https://swapi.co/api/people')">People</button>
-	<button onclick = "writeToDocument('https://swapi.co/api/planets')">Planets</button>
-	<button onclick = "writeToDocument('https://swapi.co/api/spieces')">Spieces</button>
-	<button onclick = "writeToDocument('https://swapi.co/api/starships')">Starships</button>
-	<button onclick = "writeToDocument('https://swapi.co/api/vehicles')">Vehicles</button>
-	<button onclick = "writeToDocument('https://swapi.co/api/films')">Films</button>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script type="text/javascript" src="assets/js/main.js"></script>
+    <!-- Bootstrap CSS -->
 	
-	
-    <div id="data"></div>
-</body>
+	<link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet"> 
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+	 .disable-select{
+     user-select:none;
+}	
+	.intergallactic-header{
+    font-family: 'Audiowide', cursive;
+	font-size: 4em;
+	color: grey;
+	
+	}
+		
+body {
+  background-image: url("assets/images/imperium-star-destroyer-star-wars-sternzerstorer.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+.button btn-primary btn-sm {
+	border-top: 3em;
+		}
+		
+table{
+  table-layout: auto;
+  width: 100%;  
+}		
+
+</style>
+  <title>STAR WARS</title>
+  </head>
+  <body>
+
+<br> 	 
+<div class="container">
+	<div class="col-sm-12" style="background:rgba(255,255,255, 0.3);">
+		<div class="intergallactic-header">Intergallactica - API</div></div>
+<br>	
+			<button type="button" class="btn-dark btn-sm" onclick = "writeToDocument('https://swapi.co/api/people')">People</button>
+			<button type="button" class="btn-dark btn-sm" onclick = "writeToDocument('https://swapi.co/api/planets')">Planets</button>
+			<button type="button" class="btn-dark btn-sm" onclick = "writeToDocument('https://swapi.co/api/spieces')">Spieces</button>
+			<button type="button" class="btn-dark btn-sm" onclick = "writeToDocument('https://swapi.co/api/starships')">Starships</button>
+			<button type="button" class="btn-dark btn-sm" onclick = "writeToDocument('https://swapi.co/api/vehicles')">Vehicles</button>
+			<button type="button" class="btn-dark btn-sm" onclick =  "writeToDocument('https://swapi.co/api/films')">Films</button>
+			<div id="data">
+		
+</div>
+  
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
